--- a/costs/src/components/layout/Message.module.css
+++ b/costs/src/components/layout/Message.module.css
@@ -11,10 +11,22 @@
     color: #155724;
     background-color: #d4edda;
     border-color: #c3e6cb;
+    display: flex;
+    align-items: center;
 }
 
 .error{
     color: #721c24;
     background-color: #f8d7da;
     border-color: #f5c6cb;
+    display: flex;
+    align-items: center;
+}
+
+.inform{
+    color: #bbad33;
+    background-color: #fffd74;
+    border-color: #fffc68;
+    display: flex;
+    align-items: center;
 }
