--- a/quiz/src/index.css
+++ b/quiz/src/index.css
@@ -3,4 +3,39 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Raleway", sans-serif;
+  color: white;
+}
+
+body,
+html{
+  min-height: 100vh;
+  height: 100%;
+  background-color: #1c1c1c;
+}
+
+img{
+  max-width: 100%;
+}
+
+button{
+  font-weight: bold;
+  font-size: 1.2;
+  padding: .8rem 1.5rem;
+  cursor: pointer;
+  background: linear-gradient(
+    90deg,
+    rgba(132, 53, 222, 1) 0%,
+    rgba(184, 84, 232, 1) 100%
+    );
+  border-radius: 3rem;
+  border: none;
+  transition: 0.6s;
+}
+
+button:hover {
+  background: linear-gradient(
+    90deg,
+    rgba(184, 84, 232, 1) 0%,
+    rgba(132, 53, 222, 1) 100%
+    );
 }
