--- a/quiz/src/index.css
+++ b/quiz/src/index.css
@@ -19,7 +19,7 @@ img{
 
 button{
   font-weight: bold;
-  font-size: 1.2;
+  font-size: 1.2rem;
   padding: .8rem 1.5rem;
   cursor: pointer;
   background: linear-gradient(
