--- a/costs/src/components/pages/login/Login.module.css
+++ b/costs/src/components/pages/login/Login.module.css
@@ -3,7 +3,9 @@
     height: 90vh;
     align-items: center; 
     justify-content: center;
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
+    flex-direction: column;
 }
 
 form {
